# modbus_device_programmator

./: README.md  notebook.txt  pyproject.toml
connect/: ScanUSBports.py  Scanport1.py  connect1.py  connect2.py
devices/: ip101_07a_rs.py  ip329_330_1_1.py  ip535-07ea-rs-START.py  ip535_07ea_rs.py  ip535_07ea_rs_START.py  ip_330_3_2_3_ik_specpribor.py  ipes_ik_uv.py  ipp_07ea_330_1_gelios.py  mip_i_ex.py
md_prog/: README.md  app.py  connect1.py  crc.py  device.py  main.py  parameters.py
md_prog/Devices/: ip535-07ea-rs.py
md_prog/devices/: ip535-07ea-rs-START.py  ip535_07ea_rs.py
md_prog/utilites/: crc.py  modbus.py  util.py
md_prog/views/: config.py  main_win.py  view.py
nls/: dcon.py  nsl_dev.py  scan_view.py
scaner/: scan1.py
src/: NLS_testing.py  app.py  base.py  config.py  devices.py  dialogues.py  frame.py  main.py  pop_up_window.py  root_win.py  scan.py  ter.py  ui_dialogs_win.py  ui_scan.py  utils.py  view.py
src/devices/: exip535_1v_a.py  ip101_07a_rs.py  ip329_330_1_1.py  ip535_07ea_rs.py  ip535_07ea_rs_START.py  ip_330_3_2_3_ik_specpribor.py  ipes_ik_uv.py  ipp_07ea_330_1_gelios.py  mip_i_ex.py  nls_16ai_i.py
src/view/: base_view.py  main.py  main1.py  main_view.py
src_v1/: config.py  devices.py  main.py  view.py
temp/: pop_up_window.py  root_win.py  scan_logic.py  ui_basic.py  ui_scan.py
ui/: main_win.ui  main_win_v_2_1.ui  main_win_v_2_2.ui  main_win_v_2_3.ui  main_win_v_3_5.ui  main_win_v_3_5_1.ui  main_win_v_3_5_2.ui  ui_base.ui  ui_main_window.ui  ui_scan.ui
