[tool.poetry]
name = "Modbus Device Programmator"
version = "0.1.0"
description = "Modbus Device Programmator"
authors = ["Noguzadericshenskiy <Grgpochta@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymodbus = "^3.5.2"
pyfiglet = "^1.0.2"
usb = "^0.0.83.dev0"
modbus-tk = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
