[tool.poetry]
name = "Modbus Device Programmator"
version = "0.1.0"
description = "Modbus Device Programmator"
authors = ["Noguzadericshenskiy <Grgpochta@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymodbus = "^3.5.2"
loguru = "^0.7.2"
pyside6 = "^6.6.1"
pytest = "^7.4.3"
pyserial = ">3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
